Fix dark menu text in dark mode when active

--- a/src/BMCoreUI.css
+++ b/src/BMCoreUI.css
@@ -1305,13 +1305,35 @@ input:not(:checked) + .BMWindowSwitchGutter > .BMWindowSwitchKnob, .BMWindowSwit
 		color: rgba(255, 255, 255, .9);
 	}
 
-	.BMLayoutEditorConstraintPopupOption:active, .BMMenuItem:active, .BMMenuTouch > .BMMenuItem:hover {
+	.BMLayoutEditorConstraintPopupOption:active, .BMMenuTouch > .BMMenuItem:hover {
 		background: transparent;
 		color: white;
 	}
 
 	.BMMenuTouch > .BMMenuItem {
 		border-bottom-color: rgba(255, 255, 255, .1);
+	}
+
+	@keyframes BMMenuItemActiveAnimation {
+		from {
+			background: transparent;
+			color: rgba(255, 255, 255, .9);
+		}
+	
+		49% {
+			background: transparent;
+			color: rgba(255, 255, 255, .9);
+		}
+	
+		50% {
+			background: rgb(0, 128, 255);
+			color: white;
+		}
+	
+		to {
+			background: rgb(0, 128, 255);
+			color: white;
+		}
 	}
 }
 
